--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,19 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+section {
+  color: #fff;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  background-color: #ffb6b9b0;
+  height: 100vh;
+}
+
+.navBg {
+  background-color: #7952b3;
 }
